<resources>
    <string name="app_name">Spieleabend</string>

    <!-- Permissions -->
    <string name="permission_denied">Berechtigung nicht erteilt</string>
    <string name="permission_denied_permanent">Berechtigung in den Einstellungen erteilen</string>
    <string name="permission_ex_storage_rationale">Berechtigung wird benötigt um auf die Bildergallerie zuzugreifen</string>
    <string name="permission_location_rationale">Berechtigung wird benötigt um auf den aktuellen Standort zuzugreifen</string>

    <!-- Navigation -->
    <string name="news">Neuigkeiten</string>
    <string name="events">Veranstaltungen</string>
    <string name="assistant">Assistent</string>
    <string name="profile">Profil</string>
    <string name="settings">Einstellungen</string>
    <string name="filter">Filter</string>

    <!-- News Filter Fragment -->
    <string name="sort_by">Sortiere nach:</string>
    <string name="filter_by_publisher">Filtere nach Veröffentlicher:</string>
    <string name="filter_by_topic">Filtere nach Thema:</string>
    <string name="filter_show_all">Alle</string>
    <string name="apply_btn">Anwenden</string>
    <string-array name="sort_by">
        <item>Datum: Neu -> Alt</item>
        <item>Datum: Alt -> Neu</item>
        <item>Titel: A -> Z</item>
        <item>Titel: Z -> A</item>
    </string-array>

    <!-- Event Fragment -->
    <string name="add">Starts a form, where a new event can be created</string>
    <string name="login_please">Loggen Sie sich ein um Veranstaltungen zu erstellen</string>
    <string name="start_end_time">%s - %s</string>
    <string name="distance_m">%d m</string>
    <string name="distance_km">%d km</string>

    <!-- Event Detial Fragment -->
    <string name="event_publisher">%s präsentiert</string>
    <string name="event_time">%s - %s</string>

    <!-- Event Creation Fragment -->
    <string name="title_label">Name</string>
    <string name="description_label">Beschreibung</string>
    <string name="location_label">Ort (Straße Hausnummer, PLZ Ort)</string>
    <string name="location_label_lat">Breitengrad</string>
    <string name="location_label_lon">Längengrad</string>
    <string name="start_date_label">Beginn Datum</string>
    <string name="start_time_label">Beginn Zeit</string>
    <string name="end_date_label">Ende Datum</string>
    <string name="end_time_label">Ende Zeit</string>
    <string name="date_formated">%d.%d.%d</string>
    <string name="time_formated">%s:%s</string>
    <string name="public_private_label">Öffentlich?</string>
    <string name="switch_public_label">Öffentlich</string>
    <string name="switch_private_label">Privat</string>
    <string name="event_save_btn">Veranstaltung erstellen</string>
    <string name="event_creation_onBackPressed">Änderungen verworfen</string>

    <string name="error_required">Erforderlich</string>
    <string name="error_start_in_past">Start in Vergangenheit</string>
    <string name="error_end_in_past">Ende in Vergangenheit</string>
    <string name="error_end_before_start">Ende vor Start</string>

    <!-- Assistent Fragment (images to these items are defined in arrays.xml)-->
    <string-array name="assistant_items">
        <item>Dominion Deck Generator</item>
        <item>Wer beginnt?</item>
        <item>Spielekatalog</item>
    </string-array>

    <!-- Dominion Deck Generator Fragment -->
    <string name="parent_content_desc">Arrow indicating wether item is collapsed or expanded</string>
    <string name="generate">Generieren</string>
    <string name="deck_label">Folgende Karten sind enthalten:</string>
    <string name="card_label">Vorrat:</string>
    <string name="event_label">Ereignis:</string>
    <string name="landmark_label">Wahrzeichen:</string>

    <!-- First Player Fragment -->
    <string name="amount_of_players">Wie viele Spieler spielen mit?</string>
    <string name="amount_of_players_hint">Anzahl der Spieler (max. 8)</string>
    <string name="continue_btn">Weiter</string>
    <string name="spin_btn">Rad drehen</string>

    <!-- Catalogue Fragment -->
    <string name="catalogue_player">%d Spieler</string>
    <string name="catalogue_players">%d - %d Spieler</string>
    <string name="catalogue_time">%d - %d Min</string>

    <!-- Catalogue Detail Fragment -->
    <string name="catalogue_detail_rating_num">%d Bewertungen</string>
    <string name="catalogue_detail_publisher">%s (%d)</string>
    <string name="catalogue_detail_age">%d+</string>
    <string name="catalogue_detail_categories">Kategorie: %s</string>
    <string name="catalogue_detail_mechanics">Spielmechanik: %s</string>
    <string name="catalogue_detail_learning_complexity">Erlernbarkeit: %.1f/5</string>
    <string name="catalogue_detail_strategy_complexity">Strategie: %.1f/5</string>
    <string name="catalogue_detail_rules">Regeln: %s</string>

    <!-- Profile Fragment -->
    <string name="profile_save">Speichern</string>
    <string name="login">Einloggen</string>
    <string name="logout">Ausloggen</string>

    <!-- Notifications -->
    <string name="default_notification_channel_id">spieleabend_default_channel_id</string>
    <string name="default_notification_channel_name">Spieleabend Default Notification Channel</string>

    <string name="news_topics_label">Zu welchen Themen möchten sie Benachrichtigungen erhalten?</string>
    <string-array name="news_topics">
        <item>Game</item>
        <item>Kickstarter</item>
        <item>GameOfTheYear</item>
    </string-array>

    <!-- Preferences -->
    <string name="theme_cat">Anzeigeeinstellung</string>
    <string name="theme_key">theme_key</string>
    <string name="theme_title">Nacht-Modus</string>
    <string name="theme_summary">Schalten Sie den Nacht-Modus ein oder aus</string>
    <string name="notifications_cat">Einstellungen für Push-Benachrichtigungen</string>
    <string name="notifications_switch_key">notification_switch_key</string>
    <string name="notifications_switch_title">Push-Benachrichtungen erhalten?</string>
    <string name="notifications_switch_summary">Möchten Sie Push-Benachrichtigungen erhalten?</string>
    <string name="notifications_cb_key">notification_cb_key_%s</string>
    <string name="notifications_cb_summary">Möchten Sie Push-Benachrichtigungen zum Thema %s erhalten?</string>
    <string name="save_button_key">save_button_key</string>
    <string name="save_button_title">Einstellungen speichern</string>
    <string name="save_button_settings_saved">Einstellungen gespeichert</string>

    <!-- Error Fragment -->
    <string name="error_retry">Erneut versuchen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>