<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    tools:context=".presentation.assistant.FirstPlayerFragment">

    <TextView
        android:id="@+id/first_player_amount_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/amount_of_players"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/first_player_amount_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_player_amount_label"
        android:hint="@string/amount_of_players_hint"
        android:inputType="number"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/first_player_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/continue_btn"
        />

    <include layout="@layout/progress_bar_circular"
        android:id="@+id/progressbar"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>