<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.events.EventCreationFragment">

    <ScrollView
        android:id="@+id/event_creation_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/event_creation_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/event_creation_choose_image_btn"
                android:scaleType="centerInside"
                android:src="@drawable/event_default"
                />

            <ImageButton
                android:id="@+id/event_creation_choose_image_btn"
                android:layout_width="60dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/event_creation_image"
                app:layout_constraintBottom_toBottomOf="@id/event_creation_image"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_baseline_add_photo_alternate_48"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_creation_title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_creation_image"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_creation_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/title_label"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_creation_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_creation_title_container"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_creation_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/description_label"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_creation_location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_creation_description_container"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_creation_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/location_label"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_creation_start_date_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_creation_location_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/event_creation_start_time_container"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_creation_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/start_date_label"
                    android:focusable="false"
                    android:longClickable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_creation_start_time_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/event_creation_start_date_container"
                app:layout_constraintStart_toEndOf="@id/event_creation_start_date_container"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_creation_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/start_time_label"
                    android:focusable="false"
                    android:longClickable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_creation_end_date_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_creation_start_date_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/event_creation_start_time_container"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_creation_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/end_date_label"
                    android:focusable="false"
                    android:longClickable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_creation_end_time_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/event_creation_end_date_container"
                app:layout_constraintStart_toEndOf="@id/event_creation_start_date_container"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_creation_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/end_time_label"
                    android:focusable="false"
                    android:longClickable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/event_creation_switch_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_creation_end_date_container"
                android:layout_marginTop="@dimen/vertical_space_between_views"
                >

                <TextView
                    android:id="@+id/event_creation_public_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/public_private_label"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/event_creation_switch_private_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/event_creation_public"
                    app:layout_constraintBottom_toBottomOf="@id/event_creation_public"
                    android:text="@string/switch_private_label"
                    android:textSize="16sp"
                    />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/event_creation_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/event_creation_switch_private_label"
                    app:layout_constraintTop_toBottomOf="@id/event_creation_public_label"
                    android:layout_marginStart="4dp"
                    />

                <TextView
                    android:id="@+id/event_creation_switch_public_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/event_creation_public"
                    app:layout_constraintTop_toTopOf="@id/event_creation_public"
                    app:layout_constraintBottom_toBottomOf="@id/event_creation_public"
                    android:text="@string/switch_public_label"
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/event_creation_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/event_creation_switch_container"
                android:layout_marginTop="@dimen/vertical_space_between_views_small"
                android:text="@string/event_save_btn"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/progress_bar_circular"
        android:id="@+id/progressbar"
        android:visibility="gone"
        />

    <include layout="@layout/error_view"
        android:id="@+id/error_view"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>