<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.assistant.DominionDeckFragment">

    <TextView
        android:id="@+id/dominion_deck_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/deck_label"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/dominion_deck_cards_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_label"
        android:layout_marginTop="@dimen/vertical_space_between_views"
        android:text="@string/card_label"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/dominion_deck_card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_cards_label"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card1"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card2"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card3"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card4"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card5"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card6"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card7"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card8"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_card10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card9"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_event_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_card10"
        android:layout_marginTop="@dimen/vertical_space_between_views"
        android:text="@string/event_label"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/dominion_deck_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_event_label"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

    <TextView
        android:id="@+id/dominion_deck_landmark_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_event"
        android:layout_marginTop="@dimen/vertical_space_between_views"
        android:text="@string/landmark_label"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/dominion_deck_landmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dominion_deck_landmark_label"
        android:layout_marginTop="@dimen/vertical_space_between_views_small"
        tools:text="test"
        />

</androidx.constraintlayout.widget.ConstraintLayout>